# HeroScan

./: HeroScan.py  README.md  pyproject.toml
HeroScan/: config.py  config.toml  io.py  main.py  plugins.py  targets.py
HeroScan/default-plugins/: bruteforce-ftp.py  bruteforce-http.py  bruteforce-rdp.py  bruteforce-ssh.py  curl-known-security.py  curl-robots.py  curl.py  dirbuster.py  dns-reverse-lookup.py  dns-zone-transfer.py  dnsrecon-subdomain-bruteforce.py  dnsrecon.py  enum4linux.py  get-arch.py  ldap-search.py  lookup-sid.py  nbtscan.py  nikto.py  nmap-ajp.py  nmap-cassandra.py  nmap-cups.py  nmap-distccd.py  nmap-dns.py  nmap-finger.py  nmap-ftp.py  nmap-http.py  nmap-imap.py  nmap-irc.py  nmap-kerberos.py  nmap-ldap.py  nmap-mongodb.py  nmap-mountd.py  nmap-msrpc.py  nmap-mssql.py  nmap-multicast-dns.py  nmap-mysql.py  nmap-nfs.py  nmap-nntp.py  nmap-ntp.py  nmap-oracle.py  (+42 more)
