[tool.poetry]
name = "HeroScan"
version = "2.0.29"
description = "A All-in-One Enumerator."
authors = ["P1YUSH"]
license = "GNU GPL v3"
exclude = ["HeroScan.py"]
packages = [
	{ include = "HeroScan" },
]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
colorama = "^0.4.5"
impacket = "^0.10.0"
requests = "^2.28.1"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
HeroScan = "HeroScan.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
